# scanline-algorithm-demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  nanosvg.h  simple_math.cpp  simple_math.h
src/math/: simple.cpp  simple.h
